# Albinos

./: .travis.yml  CMakeLists.txt
API_doc/: WaylandExtension.md
API_python/: setup.py
API_python/albinos/: client.py  config.py  controller.py  error.py
albinos-cli/: dub.json
albinos-cli/source/: app.d
albinos-cli/source/cli/: cli.d
albinos-cli/source/client/: client.d
albinos-cli/source/protocol/: protocol_type.d
albinos-editor/src/: albinos_editor.nim
albinos-editor/src/albinospkg/: cli.nim  options.nim
albinos-editor/src/liblinenoise/: linenoise.nim
albinos-gui/src/: albinos_gui.nim
lib/: Albinos.h  Config.cpp  Config.hpp  LibError.hpp  Libconfig.h  Subscription.cpp  Subscription.hpp  doxyfile_lib  funcHub.cpp
service/: client.hpp  config_db.hpp  db.hpp  protocol.hpp  service.hpp  utils.hpp
tests/: CMakeLists.txt  blob_test.cpp  config_db_test.cpp  service-test.cpp
